# lpil-web

./: Readme.md  pyproject.toml
lpilWeb/: cli.py
scripts/: installEditableLpilWebCommand  pullChanges  pullTestChanges
